[package]
name = "data_extraction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
dotenv = "0.15.0"
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.146", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["full"] }
